--- a/localisation/AVA_l_english.yml
+++ b/localisation/AVA_l_english.yml
@@ -37,3 +37,36 @@
  AVA_navy_screen_2:0 "Jamshid Davalien"
  AVA_navy_anti_submarine_1:0 "Kurosh Dupattewala"
  AVA_pomare_hehekia:0 "Baktash Khot"
+ #COMMUNISM EVENT
+ ava.1.t:0 "Mainland or War" #FRANCE GETS the Eventc
+ ava.1.d:0 "Long Ignoble Speach or something"
+ ava.1.a:0 "Avahya Demand France Land" #France Accepts
+ ava.1.b:0 "Avahya Demand France Land" #France Refuses
+ ava.2.t:0 "France Gives Mainland" #Avahya GETS the Eventc
+ ava.2.d:0 "Long speach or sumthin"
+ ava.2.a:0 "Good we didnt want to fight"
+ ava.4.t:0 "France Refuses" #Avahya GETS the Eventc
+ ava.4.d:0 "We meet on the field of battle or sumthing"
+ ava.4.a:0 "Nothing like a little violence cant solve"
+ 
+ ava.5.t:0 "Cardinal or War" #FRANCE GETS the Eventc
+ ava.5.d:0 "Long Ignoble Speach or something"
+ ava.5.a:0 "Avahya Demand France Land" #France Accepts
+ ava.5.b:0 "Avahya Demand France Land" #France Refuses
+ ava.6.t:0 "France Gives Cardinal" #Avahya GETS the Eventc
+ ava.6.d:0 "Long speach or sumthin"
+ ava.6.a:0 "Good we didnt want to fight"
+ ava.7.t:0 "France Refuses" #Avahya GETS the Eventc
+ ava.7.d:0 "We meet on the field of battle or sumthing"
+ ava.7.a:0 "Nothing like a little violence cant solve"
+ 
+ ava.10.t:0 "Second War of Fire and Stone?" #FRANCE GETS the Eventc
+ ava.10.d:0 "Long Ignoble Speach or something"
+ ava.10.a:0 "Avahya Demands all core" #France Accepts
+ ava.10.b:0 "Avahya Demand  all core" #France Refuses
+ ava.12.t:0 "France Gives all core" #Avahya GETS the Eventc
+ ava.12.d:0 "Long speach or sumthin"
+ ava.12.a:0 "Good we didnt want to fight"
+ ava.14.t:0 "France Refuses" #Avahya GETS the Eventc
+ ava.14.d:0 "We meet on the field of battle or sumthing"
+ ava.14.a:0 "Nothing like a little violence cant solve"
