--- a/localisation/KBS_l_english.yml
+++ b/localisation/KBS_l_english.yml
@@ -52,3 +52,24 @@
  KBS_close_air_support_2:0 "Econ'qas Khartal"
  KBS_quartermaster_gen:0 "Nertir  Qhekiq"
  KBS_capital_ship_2:0 "Zocoqra Irror"
+ kbs.1.t:0 "Stip or War" #FRANCE GETS the Eventc
+ kbs.1.d:0 "Long Ignoble Speach or something"
+ kbs.1.a:0 "Kash Demand France Land" #France Accepts
+ kbs.1.b:0 "Kash Demand France Land" #France Refuses
+ kbs.2.t:0 "France Gives Strip" #KAsh GETS the Eventc
+ kbs.2.d:0 "Long speach or sumthin"
+ kbs.2.a:0 "Good we didnt want to fight"
+ kbs.4.t:0 "France Refuses" #KAsh GETS the Eventc
+ kbs.4.d:0 "We meet on the field of battle or sumthing"
+ kbs.4.a:0 "Nothing like a little violence cant solve"
+ 
+ kbs.6.t:0 "Vassal or war" #Aka GETS the Eventc
+ kbs.6.d:0 "Long Ignoble Speach or something"
+ kbs.6.a:0 "Kash Demand Aka Land" #AkaAka Accepts
+ kbs.6.b:0 "Kash Demand Aka Land" #Aka Refuses
+ kbs.8.t:0 "Aka is  vassalized" #KAsh GETS the Eventc
+ kbs.8.d:0 "Long speach or sumthin"
+ kbs.8.a:0 "Good we didnt want to fight"
+ kbs.10.t:0 "Aka Refuses" #KAsh GETS the Eventc
+ kbs.10.d:0 "We meet on the field of battle or sumthing"
+ kbs.10.a:0 "Nothing like a little violence cant solve"
