--- a/localisation/KBS_l_english.yml
+++ b/localisation/KBS_l_english.yml
@@ -73,3 +73,9 @@
  kbs.10.t:0 "Aka Refuses" #KAsh GETS the Eventc
  kbs.10.d:0 "We meet on the field of battle or sumthing"
  kbs.10.a:0 "Nothing like a little violence cant solve"
+ 
+ kbs.20.t:0 "Language Reforms" #KAsh GETS the Eventc
+ kbs.20.d:0 "We have two main Languages Similar to eachother"
+ kbs.20.a:0 "Is it wrong to have two?" #Canon
+ kbs.20.b:0 "Koba" 
+ kbs.20.c:0 "Mace" 
