--- a/localisation/AVA_l_english.yml
+++ b/localisation/AVA_l_english.yml
@@ -70,3 +70,179 @@
  ava.14.t:0 "France Refuses" #Avahya GETS the Eventc
  ava.14.d:0 "We meet on the field of battle or sumthing"
  ava.14.a:0 "Nothing like a little violence cant solve"
+ 
+ AVA_conflicting_reports:0 "Conflicting Reports"
+ AVA_conflicting_reports_desc:0 "SSSSS"
+ AVA_worker_victory:0 "The Workers' Victory"
+ AVA_worker_victory_desc:0 "SSSSS"
+ AVA_worker_councils:0 "Workers' Councils"
+ AVA_worker_councils_desc:0 "SSSSS"
+ AVA_mainland_bound:0 "Reclaim Lemurian Possessions"
+ AVA_mainland_bound_desc:0 "SSSSS"
+ AVA_pantiyan_tigers:0 "Pantiyan Tigers"
+ AVA_pantiyan_tigers_desc:0 "SSSSS"
+ AVA_cardinal_islands:0 "Cardinal Islands"
+ AVA_cardinal_islands_desc:0 "SSSSS"
+ AVA_work_with_mandalists:0 "Work with Mandalists"
+ AVA_work_with_mandalists_desc:0 "SSSSS"
+ AVA_mandalism_is_the_way:0 "Mandalism is the Way"
+ AVA_mandalism_is_the_way_desc:0 "SSSSS"
+ AVA_work_with_communists:0 "Work with Communists"
+ AVA_work_with_communists_desc:0 "SSSSS"
+ AVA_stalinism_is_the_way:0 "Stalinism is the Way"
+ AVA_stalinism_is_the_way_desc:0 "SSSSS"
+ AVA_communist_research:0 "Peoples' Research Council"
+ AVA_communist_research_desc:0 "SSSSS"
+ AVA_soviet_investment:0 "Soviet Investment"
+ AVA_soviet_investment_desc:0 "SSSSS"
+ AVA_kumari_investment:0 "Kumari Investment"
+ AVA_kumari_investment_desc:0 "SSSSS"
+ AVA_democracy_house:0 "Democracy House"
+ AVA_democracy_house_desc:0 "SSSSS"
+ AVA_new_constitution:0 "A New Constitution"
+ AVA_new_constitution_desc:0 "SSSSS"
+ AVA_new_currency:0 "A New Currency"
+ AVA_new_currency_desc:0 "SSSSS"
+ AVA_british_lease:0 "British Lease"
+ AVA_british_lease_desc:0 "SSSSS"
+ AVA_gold_for_mainland:0 "Gold for the Mainland"
+ AVA_gold_for_mainland_desc:0 "SSSSS"
+ AVA_usa_industry_expertise:0 "US Industrial Expertise"
+ AVA_usa_industry_expertise_desc:0 "SSSSS"
+ AVA_house_lords:0 "House of Lords"
+ AVA_house_lords_desc:0 "SSSSS"
+ AVA_anglo_avahyan_treaty:0 "Anglo-Avahyan Treaty"
+ AVA_anglo_avahyan_treaty_desc:0 "SSSSS"
+ AVA_mainland_industry:0 "Mainland Industry"
+ AVA_mainland_industry_desc:0 "SSSSS"
+ AVA_british_research_university:0 "British Research University"
+ AVA_british_research_university_desc:0 "SSSSS"
+ AVA_muzumdar_house:0 "House Muzumdar"
+ AVA_muzumdar_house_desc:0 "SSSSS"
+ AVA_purge_azadeh:0 "Purge House Azadeh"
+ AVA_purge_azadeh_desc:0 "SSSSS"
+ AVA_purge_edibam:0 "Purge House Edibam"
+ AVA_purge_edibam_desc:0 "SSSSS"
+ AVA_ally_zurvanist:0 "Ally Zurvanist Movement"
+ AVA_ally_zurvanist_desc:0 "SSSSS"
+ AVA_purge_communists:0 "Purge the Communists"
+ AVA_purge_communists_desc:0 "SSSSS"
+ AVA_secret_police:0 "Empower the Secret Police"
+ AVA_secret_police_desc:0 "SSSSS"
+ AVA_yohannian_assist:0 "Request Yohannian Assistance"
+ AVA_yohannian_assist_desc:0 "SSSSS"
+ AVA_marines:0 "Train Marines"
+ AVA_marines_desc:0 "SSSSS"
+ AVA_break_cardinal_lease:0 "Break the Cardinal Lease"
+ AVA_break_cardinal_lease_desc:0 "SSSSS"
+ AVA_second_war_fire_stone:0 "2nd War of Fire and Stone"
+ AVA_second_war_fire_stone_desc:0 "SSSSS"
+ AVA_demand_somalia:0 "Demand Somalia"
+ AVA_demand_somalia_desc:0 "SSSSS"
+ AVA_princess_of_persia:0 "Princess of Persia"
+ AVA_princess_of_persia_desc:0 "SSSSS"
+ AVA_azadeh_house:0 "House Azadeh"
+ AVA_azadeh_house_desc:0 "SSSSS"
+ AVA_purge_muzumdar:0 "Purge House Muzumdar"
+ AVA_purge_muzumdar_desc:0 "SSSSS"
+ AVA_purge_edibam_m:0 "Purge House Edibam"
+ AVA_purge_edibam_m_desc:0 "SSSSS"
+ AVA_mazdakist_alternative:0 "The Mazdakist Alternative"
+ AVA_mazdakist_alternative_desc:0 "SSSSS"
+ AVA_monarchical_socialist_blend:0 "Monarchist-Socialist Alliance"
+ AVA_monarchical_socialist_blend_desc:0 "SSSSS"
+ AVA_paratoopers:0 "Train Paratroopers"
+ AVA_paratoopers_desc:0 "SSSSS"
+ AVA_purchase_british_ship:0 "Purchase British Hulls"
+ AVA_purchase_british_ship_desc:0 "SSSSS"
+ AVA_parviz_general:0 "General Parviz"
+ AVA_parviz_general_desc:0 "SSSSS"
+ AVA_female_aviators:0 "Female Aviators"
+ AVA_female_aviators_desc:0 "There is no reason for women to hide at home. Our women are bold and strong, and they are just as capable at flying aircraft as any of our men. We will make use of our women to defend our nation!"
+ AVA_join_britain:0 "Ally with Britain"
+ AVA_join_britain_desc:0 "SSSSS"
+ AVA_civilian_industry:0 "Civilian Industry"
+ AVA_civilian_industry_desc:0 "We must expand our civilian industry if we are to be competetive in the world market and provide the goods our citizens need."
+ AVA_military_industry:0 "Military Industry"
+ AVA_military_industry_desc:0 "The defense of our nation requires a number of factory lines dedicated to the production of military goods."
+ AVA_shipyard:0 "Construct Shipyards"
+ AVA_shipyard_desc:0 "The trade lanes through the Indolemurian Ocean have always belonged to Avahya. By constructing more hulls we can discourage any of our neighbors from threatening our hegemony."
+ AVA_chrome:0 "Chrome Mines"
+ AVA_chrome_desc:0 "While we are poor in oil, our nation has rich reserves of minerals like chrome. By investing in chrome mines we can take a good slice of the world market."
+ AVA_chrome_2:0 "Expanded Chrome Mines"
+ AVA_chrome_2_desc:0 "The first round of mines have been a success, so now we will invest further to dominate our regional chrome markets."
+ AVA_capital_university:0 "Capital University"
+ AVA_capital_university_desc:0 "New Ishdagahl is a venerable old city, but she does not yet have a university. Investments in a high quality education for our youth will surely bring great benefits."
+ AVA_iron:0 "Iron Mines"
+ AVA_iron_desc:0 "All military units, from hulls to airframes, require sizeable amounts of steel. We must expand our iron mines to ensure sufficient steel for our industries."
+ AVA_iron_2:0 "Expanded Iron Mines"
+ AVA_iron_2_desc:0 "Our mines must expand to meet the ravenous requirements of our industry, both civilian and military."
+ AVA_panchaian_tungsten:0 "Panchaian Tungsten"
+ AVA_panchaian_tungsten_desc:0 "All advanced technology requires this incrediby hard, incredibly heat resistant element: Tungsten."
+ AVA_learning_civil_war:0 "Civil War Lessons"
+ AVA_learning_civil_war_desc:0 "SSSSS"
+ AVA_reform_army:0 "Reform the Army"
+ AVA_reform_army_desc:0 "SSSSS"
+ AVA_firepower:0 "Firepower Focus"
+ AVA_firepower_desc:0 "SSSSS"
+ AVA_infantry:0 "Infantry Advancements"
+ AVA_infantry_desc:0 "SSSSS"
+ AVA_artillery:0 "Artillery Advancements"
+ AVA_artillery_desc:0 "SSSSS"
+ AVA_support:0 "Support Elements"
+ AVA_support_desc:0 "SSSSS"
+ AVA_blitzkrieg:0 "Blitzkrieg Tactics"
+ AVA_blitzkrieg_desc:0 "SSSSS"
+ AVA_grand_plan:0 "Grand Plan"
+ AVA_grand_plan_desc:0 "SSSSS"
+ AVA_trucks:0 "Military Lorries"
+ AVA_trucks_desc:0 "SSSSS"
+ AVA_tanks:0 "Tank Advancements"
+ AVA_tanks_desc:0 "SSSSS"
+ AVA_trains:0 "Trains"
+ AVA_trains_desc:0 "SSSSS"
+ AVA_spec_ops:0 "Special Operations"
+ AVA_spec_ops_desc:0 "SSSSS"
+ AVA_reform_navy:0 "Naval Reforms"
+ AVA_reform_navy_desc:0 "SSSSS"
+ AVA_purchase_british_ships:0 "Purchase British Ships"
+ AVA_purchase_british_ships_desc:0 "SSSSS"
+ AVA_fleet_being:0 "Fleet in Being Doctrine"
+ AVA_fleet_being_desc:0 "SSSSS"
+ AVA_destroyer:0 "Destroyer Focus"
+ AVA_destroyer_desc:0 "SSSSS"
+ AVA_battleship:0 "Battleship Focus"
+ AVA_battleship_desc:0 "SSSSS"
+ AVA_purchase_american_ships:0 "Purchase American Ships"
+ AVA_purchase_american_ships_desc:0 "SSSSS"
+ AVA_base_strike:0 "Base Strike Doctrine"
+ AVA_base_strike_desc:0 "SSSSS"
+ AVA_battlecruiser:0 "Battlecruiser Focus"
+ AVA_battlecruiser_desc:0 "SSSSS"
+ AVA_purchase_italian_ships:0 "Purchase Italian Ships"
+ AVA_purchase_italian_ships_desc:0 "SSSSS"
+ AVA_trade_war:0 "Trade War Doctrine"
+ AVA_trade_war_desc:0 "SSSSS"
+ AVA_cruiser:0 "Cruiser Focus"
+ AVA_cruiser_desc:0 "SSSSS"
+ AVA_submarine:0 "Submarine Focus"
+ AVA_submarine_desc:0 "SSSSS"
+ AVA_reform_air:0 "Reform Air Force"
+ AVA_reform_air_desc:0 "SSSSS"
+ AVA_strategic_destruction:0 "Strategic Destruction"
+ AVA_strategic_destruction_desc:0 "SSSSS"
+ AVA_battlefield_support:0 "Battlefield Support"
+ AVA_battlefield_support_desc:0 "SSSSS"
+ AVA_operational_integrity:0 "Operational Integrity"
+ AVA_operational_integrity_desc:0 "SSSSS"
+ AVA_large_aircraft:0 "Large Airframe Focus"
+ AVA_large_aircraft_desc:0 "SSSSS"
+ AVA_efficient_engines:0 "Efficient Engines"
+ AVA_efficient_engines_desc:0 "SSSSS"
+ AVA_larger_guns:0 "Larger Aircraft Armaments"
+ AVA_larger_guns_desc:0 "SSSSS"
+ AVA_medium_aircraft:0 "Medium Airframe Focus"
+ AVA_medium_aircraft_desc:0 "SSSSS"
+ AVA_small_aircraft:0 "Small Airframe Focus"
+ AVA_small_aircraft_desc:0 "SSSSS"
+ 
