--- a/localisation/BLM_l_english.yml
+++ b/localisation/BLM_l_english.yml
@@ -33,7 +33,7 @@
  BLM_disband_the_ig:0 "Disband the I.G."
  BLM_disband_the_ig_desc:0 "The Imperial Garrison is something which dates back to the formation of the first British colonies, now it has become out-dated and serves more as a political tool of an old oppressive government."
  BLM_federal_sympathies:0 "Federal Sympathies"
- BLM_federal_sympathies_desc:0 "To further smoothen the transformation to a federation we must appoint new pro-federation officials and bring further benefits to federal sympathizers."
+ BLM_federal_sympathies_desc:0 "To further smooth the transformation to a federation we must appoint new pro-federation officials and bring further benefits to federal sympathizers."
  BLM_second_anglosaxon_reforms:0 "Second Anglo-Saxon Reforms"
  BLM_second_anglosaxon_reforms_desc:0 "The Anglo-Saxon Reforms were devestating reforms which ravaged the country from 1893-1911. The era was known for its brutality against non-Anglo-Saxon and non-Anglish peoples, seeing them all as threats and barbarians in need of 'civilizing'. Now a great debate has started in the British-Lemurian parliment regarding further reforms."
  BLM_continue_the_reforms:0 "Continue the Reforms"
