--- a/localisation/AVA_l_english.yml
+++ b/localisation/AVA_l_english.yml
@@ -72,9 +72,9 @@
  ava.14.a:0 "Nothing like a little violence cant solve"
  
  AVA_conflicting_reports:0 "Conflicting Reports"
- AVA_conflicting_reports_desc:0 "SSSSS"
+ AVA_conflicting_reports_desc:0 "'The Civil War has been raging for almost 3 years, between the Socialists, Conservatives, Loyalists, and nationalists. Fighting has culminated on the capital city, the battle for the capital has been raging on for months now, and with conflicting reports coming in across the country, it seems the true victor is...'"
  AVA_worker_victory:0 "The Workers' Victory"
- AVA_worker_victory_desc:0 "SSSSS"
+ AVA_worker_victory_desc:0 "'Using their superior manpower, the socialists have broken the shackles of the monarchy and aristrocracy that has held them down for so long. this victory is sure to bring many big changes to the country we know. Whilst pockets of resistance remain, the socialists have the numerical majority, and these pockets are sure to fall.'
  AVA_worker_councils:0 "Workers' Councils"
  AVA_worker_councils_desc:0 "SSSSS"
  AVA_mainland_bound:0 "Reclaim Lemurian Possessions"
@@ -97,8 +97,8 @@
  AVA_soviet_investment_desc:0 "SSSSS"
  AVA_kumari_investment:0 "Kumari Investment"
  AVA_kumari_investment_desc:0 "SSSSS"
- AVA_democracy_house:0 "Democracy House"
- AVA_democracy_house_desc:0 "SSSSS"
+ AVA_democracy_house:0 "Conservitive Victory" 
+ AVA_democracy_house_desc:0 "'Having swayed many of the houses to their side, the Edibam house has secured political and military victory over the enemy, they have promised a smooth transition to a constituional monarchy, however with the known greed of the Edibam house and the new Shah, Kamran, only being 16, this many not turn out to be the democracy everyone was hoping for.'"
  AVA_new_constitution:0 "A New Constitution"
  AVA_new_constitution_desc:0 "SSSSS"
  AVA_new_currency:0 "A New Currency"
@@ -117,8 +117,8 @@
  AVA_mainland_industry_desc:0 "SSSSS"
  AVA_british_research_university:0 "British Research University"
  AVA_british_research_university_desc:0 "SSSSS"
- AVA_muzumdar_house:0 "House Muzumdar"
- AVA_muzumdar_house_desc:0 "SSSSS"
+ AVA_muzumdar_house:0 "Victory for Roya
+ AVA_muzumdar_house_desc:0 "'Roya, the heiress apparent to the throne, has secured victory over the interlopers that tried to steal the crown away from her. Using her naval forces and superior artillery, she has secured the surrender of her brother, the Houses, and many of the socialists. With our true Monarch in charge, the only future for Avahya is looking bright. All hail the Shahbanu.'
  AVA_purge_azadeh:0 "Purge House Azadeh"
  AVA_purge_azadeh_desc:0 "SSSSS"
  AVA_purge_edibam:0 "Purge House Edibam"
@@ -141,26 +141,26 @@
  AVA_demand_somalia_desc:0 "SSSSS"
  AVA_princess_of_persia:0 "Princess of Persia"
  AVA_princess_of_persia_desc:0 "SSSSS"
- AVA_azadeh_house:0 "House Azadeh"
- AVA_azadeh_house_desc:0 "SSSSS"
+ AVA_azadeh_house:0 "Azadeh Victory
+ AVA_azadeh_house_desc:0 "'In a daring move that has shocked militaries around the world, Parviz and the Azadeh house have emerged victorious from battle. Using paratroopers, Parviz made the bold move to paratroop onto the ships being used by Roya's forces, succeding in capturing most of them, the ensuing naval battle removed all of Roya's firepower swiftly, with some final daring maneuvers in the mountains and city, Roya has been captured and the majority of the house's leaders surrendered awaiting judgement. The only loose end that remains are the socialists.
  AVA_purge_muzumdar:0 "Purge House Muzumdar"
- AVA_purge_muzumdar_desc:0 "SSSSS"
+ AVA_purge_muzumdar_desc:0 "The Muzumdar house were supporters of Roya, whilst some of them have exiled to Yohannia many still reside in the country, we need to get rid of them to ensure the saftey of the Shah"
  AVA_purge_edibam_m:0 "Purge House Edibam"
- AVA_purge_edibam_m_desc:0 "SSSSS"
+ AVA_purge_edibam_m_desc:0 "The Edibam house has a long history of being the mavericks of the houses, this is no more true than during the civil war, when they manipulated the 13 year old price Kamran to defy Parviz and Roya, leading to his death, the Edibam house must be culled for this heinous crime."
  AVA_mazdakist_alternative:0 "The Mazdakist Alternative"
- AVA_mazdakist_alternative_desc:0 "SSSSS"
- AVA_monarchical_socialist_blend:0 "Monarchist-Socialist Alliance"
- AVA_monarchical_socialist_blend_desc:0 "SSSSS"
+ AVA_mazdakist_alternative_desc:0 "The Mazdakists, a pacifist religon similar to Zoroastrianism has been adament on their neutrality in the civil war and how they refuse to fight for any regime. Whilst some hardliners suggest eliminating the Mazdakists, Parviz poses a more sane solution to instead have them work in industires instead of battlefields if war emerges."
+ AVA_monarchical_socialist_blend:0 "Monarchist-Socialist Blend"
+ AVA_monarchical_socialist_blend_desc:0 "Despite our victory in the civil war, the socialists are still prominent in many of the cities. Whilst some hardliners want to root out the last of them, Parviz has declared that the socialists will be invited to discuss a possible compromise between us."
  AVA_paratoopers:0 "Train Paratroopers"
- AVA_paratoopers_desc:0 "SSSSS"
+ AVA_paratoopers_desc:0 "Paratroopers were vital in victory for the civil war, and they will be vital in any war to come, we should invest further in their training"
  AVA_purchase_british_ship:0 "Purchase British Hulls"
- AVA_purchase_british_ship_desc:0 "SSSSS"
+ AVA_purchase_british_ship_desc:0 "Whilst our dockyards are running again, there is no way we can hope to meet the size of our pre-civil war navy. To the chargin of many, Parviz and many others have agreed to dicuss with the British to purchase some old hulls in return for exclusive trade deals.
  AVA_parviz_general:0 "General Parviz"
- AVA_parviz_general_desc:0 "SSSSS"
+ AVA_parviz_general_desc:0 "Parviz has come a long way since the war, he has won the hearts and minds of the people, and it is time for him to win the favor of the military. With tensions rising all around the world, Parviz has annouced that he is taking a more prominent role in military affairs.
  AVA_female_aviators:0 "Female Aviators"
  AVA_female_aviators_desc:0 "There is no reason for women to hide at home. Our women are bold and strong, and they are just as capable at flying aircraft as any of our men. We will make use of our women to defend our nation!"
  AVA_join_britain:0 "Ally with Britain"
- AVA_join_britain_desc:0 "SSSSS"
+ AVA_join_britain_desc:0 "The United Kingdom have always been one of our closest allies in europe, with the tension growing in Europe, and Avahya finally ready to get back into action, we may be able to ally with britian in return for the Cardinal Islands we leased to them in the 1870s"
  AVA_civilian_industry:0 "Civilian Industry"
  AVA_civilian_industry_desc:0 "We must expand our civilian industry if we are to be competetive in the world market and provide the goods our citizens need."
  AVA_military_industry:0 "Military Industry"
