minor spelling mistakes

--- a/localisation/AVA_l_english.yml
+++ b/localisation/AVA_l_english.yml
@@ -74,7 +74,7 @@
  AVA_conflicting_reports:0 "Conflicting Reports"
  AVA_conflicting_reports_desc:0 "'The Civil War has been raging for almost 3 years, between the Socialists, Conservatives, Loyalists, and nationalists. Fighting has culminated on the capital city, the battle for the capital has been raging on for months now, and with conflicting reports coming in across the country, it seems the true victor is...'"
  AVA_worker_victory:0 "The Workers' Victory"
- AVA_worker_victory_desc:0 "'Using their superior manpower, the socialists have broken the shackles of the monarchy and aristrocracy that has held them down for so long. this victory is sure to bring many big changes to the country we know. Whilst pockets of resistance remain, the socialists have the numerical majority, and these pockets are sure to fall.'
+ AVA_worker_victory_desc:0 "'Using their superior manpower, the socialists have broken the shackles of the monarchy and aristrocracy that has held them down for so long. this victory is sure to bring many big changes to the country we know. Whilst pockets of resistance remain, the socialists have the numerical majority, and these pockets are sure to fall eventually.'"
  AVA_worker_councils:0 "Workers' Councils"
  AVA_worker_councils_desc:0 "SSSSS"
  AVA_mainland_bound:0 "Reclaim Lemurian Possessions"
@@ -97,7 +97,7 @@
  AVA_soviet_investment_desc:0 "SSSSS"
  AVA_kumari_investment:0 "Kumari Investment"
  AVA_kumari_investment_desc:0 "SSSSS"
- AVA_democracy_house:0 "Conservitive Victory" 
+ AVA_democracy_house:0 "Conservative Victory"
  AVA_democracy_house_desc:0 "'Having swayed many of the houses to their side, the Edibam house has secured political and military victory over the enemy, they have promised a smooth transition to a constituional monarchy, however with the known greed of the Edibam house and the new Shah, Kamran, only being 16, this many not turn out to be the democracy everyone was hoping for.'"
  AVA_new_constitution:0 "A New Constitution"
  AVA_new_constitution_desc:0 "SSSSS"
