--- a/localisation/AVA_l_english.yml
+++ b/localisation/AVA_l_english.yml
@@ -76,27 +76,27 @@
  AVA_worker_victory:0 "The Workers' Victory"
  AVA_worker_victory_desc:0 "'Using their superior manpower, the socialists have broken the shackles of the monarchy and aristrocracy that has held them down for so long. this victory is sure to bring many big changes to the country we know. Whilst pockets of resistance remain, the socialists have the numerical majority, and these pockets are sure to fall eventually.'"
  AVA_worker_councils:0 "Workers' Councils"
- AVA_worker_councils_desc:0 "SSSSS"
+ AVA_worker_councils_desc:0 "In order to ensure long term stability and workers right, unions and workers councils will be avaliable to all workers, allowing for workers to make the decisions that affect them directly, instead of letting the arsitocrats make decisions that only beneifit themselves.
  AVA_mainland_bound:0 "Reclaim Lemurian Possessions"
- AVA_mainland_bound_desc:0 "SSSSS"
+ AVA_mainland_bound_desc:0 "The Mainland has long been a historical part of Avahya, the French took it away from us. We must demand its return diplomatically, and invade if they leave us no other choice."
  AVA_pantiyan_tigers:0 "Pantiyan Tigers"
- AVA_pantiyan_tigers_desc:0 "SSSSS"
+ AVA_pantiyan_tigers_desc:0 "The Pantiyan tigers are a group of rebels in Pantiya, we should support them so they overthrow the french colonizers that plauge their land"
  AVA_cardinal_islands:0 "Cardinal Islands"
- AVA_cardinal_islands_desc:0 "SSSSS"
+ AVA_cardinal_islands_desc:0 "In the 1890s the old monarchy leased the islands of Gešen and Saheršahar, we do not recognize this colonizers attempt to take land from us, and shall demand the return of all the Cardinal islands"
  AVA_work_with_mandalists:0 "Work with Mandalists"
- AVA_work_with_mandalists_desc:0 "SSSSS"
+ AVA_work_with_mandalists_desc:0 "The Soviets are to autocratic, the Mandalists would be much better allies considering their proximity."
  AVA_mandalism_is_the_way:0 "Mandalism is the Way"
- AVA_mandalism_is_the_way_desc:0 "SSSSS"
- AVA_work_with_communists:0 "Work with Communists"
- AVA_work_with_communists_desc:0 "SSSSS"
+ AVA_mandalism_is_the_way_desc:0 "The Mandalists have proven an invaluable ally, we should make the alliance official to help spread the revolution throughout Lemuria"
+ AVA_work_with_communists:0 "Work with the Soviet Union"
+ AVA_work_with_communists_desc:0 "The Soviet Union is the first communist state, as such we are obligated to join them on their path to global revolution."
  AVA_stalinism_is_the_way:0 "Stalinism is the Way"
- AVA_stalinism_is_the_way_desc:0 "SSSSS"
+ AVA_stalinism_is_the_way_desc:0 "Many within the party see Josef Stalin as an autocratic extremist, however his policies may be the only way to secure Avahya's future, so we say to the camps with the naysayers!"
  AVA_communist_research:0 "Peoples' Research Council"
- AVA_communist_research_desc:0 "SSSSS"
+ AVA_communist_research_desc:0 "Education in Avahya was kept to the aristrocrats and priesthood, by educating everyone and setting up think tanks, we will be able to surpass the capitalist world and assist in the global revolution."
  AVA_soviet_investment:0 "Soviet Investment"
- AVA_soviet_investment_desc:0 "SSSSS"
+ AVA_soviet_investment_desc:0 "Our alliance with the Soviets has grown, we should ask them to fund some of our repair efforts in the countryside."
  AVA_kumari_investment:0 "Kumari Investment"
- AVA_kumari_investment_desc:0 "SSSSS"
+ AVA_kumari_investment_desc:0 "Kumari and the Mandalists have proven invaluable allies, we should ask them to invest in our country for the greater stability of both of us."
  AVA_democracy_house:0 "Conservative Victory"
  AVA_democracy_house_desc:0 "'Having swayed many of the houses to their side, the Edibam house has secured political and military victory over the enemy, they have promised a smooth transition to a constituional monarchy, however with the known greed of the Edibam house and the new Shah, Kamran, only being 16, this many not turn out to be the democracy everyone was hoping for.'"
  AVA_new_constitution:0 "A New Constitution"
