--- a/localisation/AVA_l_english.yml
+++ b/localisation/AVA_l_english.yml
@@ -100,23 +100,23 @@
  AVA_democracy_house:0 "Conservative Victory"
  AVA_democracy_house_desc:0 "'Having swayed many of the houses to their side, the Edibam house has secured political and military victory over the enemy, they have promised a smooth transition to a constituional monarchy, however with the known greed of the Edibam house and the new Shah, Kamran, only being 16, this many not turn out to be the democracy everyone was hoping for.'"
  AVA_new_constitution:0 "A New Constitution"
- AVA_new_constitution_desc:0 "SSSSS"
+ AVA_new_constitution_desc:0 "Avahya never had a form of parliament before the civil war, constitutions in avahya tended to be local, made by the arsitrocratic lords. Whilst some in Avahya want this system to a return, a new, unifed constitution will keep the nation safter in the long run
  AVA_new_currency:0 "A New Currency"
- AVA_new_currency_desc:0 "SSSSS"
+ AVA_new_currency_desc:0 "The Drachm has been devauled by the civil war, it would be in our best intrests to introduce a new currency before inflation causes chaos across Avahya
  AVA_british_lease:0 "British Lease"
- AVA_british_lease_desc:0 "SSSSS"
+ AVA_british_lease_desc:0 "We leased the Islands of Gešen and Saheršahar to Britian in the 1890s, the lease was suppose to last around 50 years then be renegotiated, its time for us to finally return to the islands.
  AVA_gold_for_mainland:0 "Gold for the Mainland"
- AVA_gold_for_mainland_desc:0 "SSSSS"
+ AVA_gold_for_mainland_desc:0 "France took our mainland provinces in the 1870s, for a long time it has seemed like we would never get the land back peacefully, however using our gold reserves and new government, we may be able to find a diplomatic solution afterall."
  AVA_usa_industry_expertise:0 "US Industrial Expertise"
- AVA_usa_industry_expertise_desc:0 "SSSSS"
+ AVA_usa_industry_expertise_desc:0 "The US is the sleeping giant, having massive industrial might compared to us, we should allow their companies to invest in our industry to improve relations and our economy."
  AVA_house_lords:0 "House of Lords"
- AVA_house_lords_desc:0 "SSSSS"
+ AVA_house_lords_desc:0 "Many aristrocratic groups in Avahya feel cheated out of our new democracy, we should ensure they dont rebel by giving them their own spot in the parliament."
  AVA_anglo_avahyan_treaty:0 "Anglo-Avahyan Treaty"
- AVA_anglo_avahyan_treaty_desc:0 "SSSSS"
+ AVA_anglo_avahyan_treaty_desc:0 "Its time for us to finally reopen proper relations with our British friends, and join them in their struggles.
  AVA_mainland_industry:0 "Mainland Industry"
- AVA_mainland_industry_desc:0 "SSSSS"
+ AVA_mainland_industry_desc:0 "With the mainland reclaimed, we can finally industrialize further let our economy flourish"
  AVA_british_research_university:0 "British Research University"
- AVA_british_research_university_desc:0 "SSSSS"
+ AVA_british_research_university_desc:0 "Our population is sorely uneducated and illiterate, but by sending our best and brightest minds into a think tank with the british, we may be able to change that quite quickly.
  AVA_muzumdar_house:0 "Victory for Roya
  AVA_muzumdar_house_desc:0 "'Roya, the heiress apparent to the throne, has secured victory over the interlopers that tried to steal the crown away from her. Using her naval forces and superior artillery, she has secured the surrender of her brother, the Houses, and many of the socialists. With our true Monarch in charge, the only future for Avahya is looking bright. All hail the Shahbanu.'
  AVA_purge_azadeh:0 "Purge House Azadeh"
@@ -141,7 +141,7 @@
  AVA_demand_somalia_desc:0 "SSSSS"
  AVA_princess_of_persia:0 "Princess of Persia"
  AVA_princess_of_persia_desc:0 "SSSSS"
- AVA_azadeh_house:0 "Azadeh Victory
+ AVA_azadeh_house:0 "Azadeh Victory"
  AVA_azadeh_house_desc:0 "'In a daring move that has shocked militaries around the world, Parviz and the Azadeh house have emerged victorious from battle. Using paratroopers, Parviz made the bold move to paratroop onto the ships being used by Roya's forces, succeding in capturing most of them, the ensuing naval battle removed all of Roya's firepower swiftly, with some final daring maneuvers in the mountains and city, Roya has been captured and the majority of the house's leaders surrendered awaiting judgement. The only loose end that remains are the socialists.
  AVA_purge_muzumdar:0 "Purge House Muzumdar"
  AVA_purge_muzumdar_desc:0 "The Muzumdar house were supporters of Roya, whilst some of them have exiled to Yohannia many still reside in the country, we need to get rid of them to ensure the saftey of the Shah"
