--- a/localisation/AVA_l_english.yml
+++ b/localisation/AVA_l_english.yml
@@ -120,27 +120,27 @@
  AVA_muzumdar_house:0 "Victory for Roya
  AVA_muzumdar_house_desc:0 "'Roya, the heiress apparent to the throne, has secured victory over the interlopers that tried to steal the crown away from her. Using her naval forces and superior artillery, she has secured the surrender of her brother, the Houses, and many of the socialists. With our true Monarch in charge, the only future for Avahya is looking bright. All hail the Shahbanu.'
  AVA_purge_azadeh:0 "Purge House Azadeh"
- AVA_purge_azadeh_desc:0 "SSSSS"
+ AVA_purge_azadeh_desc:0 "The Azadeh house was the main supporter of Parviz and his rebellion, whilst Parviz is long gone, many members of the Azadeh house remain, we must get rid of them to ensure the stability of the monarchy."
  AVA_purge_edibam:0 "Purge House Edibam"
- AVA_purge_edibam_desc:0 "SSSSS"
+ AVA_purge_edibam_desc:0 "The Edibam house have always been backstabbers, they've rallied many houses behind them during the civil war in an attempt to set up their own agenda, we must purge them and their allies to protect the people and the monarchy."
  AVA_ally_zurvanist:0 "Ally Zurvanist Movement"
- AVA_ally_zurvanist_desc:0 "SSSSS"
+ AVA_ally_zurvanist_desc:0 "For many, the Zurvanists were a group of extremists, having been hunted by the houses for years as if they were a cult. Their brutal methods however may be able to benefit us in the future, we should seek an alliance with them and give them the protection they deserve."
  AVA_purge_communists:0 "Purge the Communists"
- AVA_purge_communists_desc:0 "SSSSS"
+ AVA_purge_communists_desc:0 "Whilst we removed most communist cells from the nation, many still remain in hiding outside the cities, the time has come to eliminate the rest of them, protecting our subjects from their wrath."
  AVA_secret_police:0 "Empower the Secret Police"
- AVA_secret_police_desc:0 "SSSSS"
+ AVA_secret_police_desc:0 "The secret police to most doesn't exist, however they have existed since the Farah Era, and have have been used as a way to secretly punish those who speak against the Shah. It is time to give them further powers, they shall no longer need to wait for permission to enact their punishments among those who deserve it."
  AVA_yohannian_assist:0 "Request Yohannian Assistance"
- AVA_yohannian_assist_desc:0 "SSSSS"
+ AVA_yohannian_assist_desc:0 "Roya visisted Yohannia when she was young as an ambassador, Yohannia has shown to be a worthy nation, and despite their muslim minority it could be worth allying with them and requesting their assistance in the coming conflicts"
  AVA_marines:0 "Train Marines"
- AVA_marines_desc:0 "SSSSS"
+ AVA_marines_desc:0 "If we are to reclaim our lost lands, we must make sure we have skilled landing troops, Parviz wanted to rely on paratroopers, however they have proven unreliable and inefficent, we shall return to our roots and train amphibious troops.
  AVA_break_cardinal_lease:0 "Break the Cardinal Lease"
- AVA_break_cardinal_lease_desc:0 "SSSSS"
- AVA_second_war_fire_stone:0 "2nd War of Fire and Stone"
- AVA_second_war_fire_stone_desc:0 "SSSSS"
+ AVA_break_cardinal_lease_desc:0 "The Cardinal Islands have been held by foreign powers for too long, it is time to reclaim them, by force if needed."
+ AVA_second_war_fire_stone:0 "Reclaim the mainland"
+ AVA_second_war_fire_stone_desc:0 "The Mainland has been held by france ever since they decided to invade us in the 1870s, it is time for them to return it, either peacefully or by the sword."
  AVA_demand_somalia:0 "Demand Somalia"
- AVA_demand_somalia_desc:0 "SSSSS"
+ AVA_demand_somalia_desc:0 "We created a colony in Somalia early in our history, the city of Durvhas was a good trading post and pitstop for passing ships, however as our economy tanked in the 1880s, Italy took it as an opportunity to take the city from us, its time for us to reclaim it and the surronding area, whether they want to give it to us or not."
  AVA_princess_of_persia:0 "Princess of Persia"
- AVA_princess_of_persia_desc:0 "SSSSS"
+ AVA_princess_of_persia_desc:0 "It is finally time, we shall reclaim our homeland from the Muslim infidels, Persia is a Zoroastrian land, It is time for the world to remember what the Persian Empire once was."
  AVA_azadeh_house:0 "Azadeh Victory"
  AVA_azadeh_house_desc:0 "'In a daring move that has shocked militaries around the world, Parviz and the Azadeh house have emerged victorious from battle. Using paratroopers, Parviz made the bold move to paratroop onto the ships being used by Roya's forces, succeding in capturing most of them, the ensuing naval battle removed all of Roya's firepower swiftly, with some final daring maneuvers in the mountains and city, Roya has been captured and the majority of the house's leaders surrendered awaiting judgement. The only loose end that remains are the socialists.
  AVA_purge_muzumdar:0 "Purge House Muzumdar"
